# JuanOrtegaPersonalAgent

./: .gitignore  README.md  pyproject.toml
.docs/management/: 1_indice.md  feedback_protocol.md  golden_rules.md  how_to_iterate.md  new_implementation_protocol.md  technical_evolution_plan.md
.github/workflows/: ci.yml
backend/: __init__.py
backend/app/: __init__.py  agent.py  main.py  rag.py  schemas.py
data/: qa_knowledge.json
docs/features/active/: recruiter_agent_system.md
test/: test_agent.py
